--- a/Project.toml
+++ b/Project.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
+FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
@@ -15,6 +16,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 
@@ -22,6 +24,7 @@ VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 ChunkSplitters = "3.1.0"
 Combinatorics = "1.0.2"
 Compat = "4.16.0"
+FFTW = "1.8.1"
 LinearAlgebra = "1.11.0"
 MAT = "0.10.7"
 Optim = "1.11.0"
@@ -30,6 +33,7 @@ Random = "1.11.0"
 Revise = "3.7.2"
 StaticArrays = "1.9.11"
 Statistics = "1.11.1"
+StatsBase = "0.34.4"
 Test = "1.11.0"
 VP4Optim = "1.0.8"
 julia = "1.6.7"
