--- a/Project.toml
+++ b/Project.toml
@@ -20,6 +20,7 @@ StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 
 [compat]
@@ -39,6 +40,7 @@ StaticArrays = "1.9.11"
 Statistics = "1.11.1"
 StatsBase = "0.34.4"
 Test = "1.11.0"
+TimerOutputs = "0.5.28"
 VP4Optim = "1.0.8"
 julia = "1.6.7"
 
