--- a/Project.toml
+++ b/Project.toml
@@ -5,15 +5,17 @@ version = "0.1.0"
 
 [deps]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
+Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
-PlotThemes = "ccf2f8ad-2431-5c83-bf29-c5338b663b6a"
-Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -25,15 +27,17 @@ VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 
 [compat]
 BenchmarkTools = "1.6.0"
+CairoMakie = "0.13.4"
 ChunkSplitters = "3.1.0"
 Combinatorics = "1.0.2"
 Compat = "4.16.0"
 FFTW = "1.8.1"
+HDF5 = "0.17.2"
+LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
 MAT = "0.10.7"
+Measures = "0.3.2"
 Optim = "1.11.0"
-PlotThemes = "3.3.0"
-Plots = "1.40.9"
 Random = "1.11.0"
 Revise = "3.7.2"
 StaticArrays = "1.9.11"
