--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "B0Map"
 uuid = "26d27508-09c5-44d0-86be-f4e37b03a7e6"
-authors = ["Carl Ganter <cganter@tum.de>"]
 version = "0.1.0"
+authors = ["Carl Ganter <cganter@tum.de>"]
 
 [deps]
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
@@ -11,6 +11,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
 MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
@@ -30,6 +31,7 @@ FFTW = "1.8.1"
 HDF5 = "0.17.2"
 LaTeXStrings = "1.4.0"
 LinearAlgebra = "1.11.0"
+LinearSolve = "3.44.0"
 MAT = "0.10.7"
 Optim = "1.11.0"
 Random = "1.11.0"
