--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ MAT = "23992714-dd62-5051-b70f-ba57cb901cac"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Revise = "295af30f-e4ad-537b-8983-00126c2a3abe"
+SavitzkyGolay = "c4bf5708-b6a6-4fbe-bcd0-6850ed671584"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
@@ -38,6 +39,7 @@ MAT = "0.10.7"
 Optim = "1.11.0"
 Random = "1.11.0"
 Revise = "3.7.2"
+SavitzkyGolay = "0.9.1"
 StaticArrays = "1.9.11"
 Statistics = "1.11.1"
 StatsBase = "0.34.4"
