--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,6 @@
 [deps]
 B0Map = "26d27508-09c5-44d0-86be-f4e37b03a7e6"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+
+[sources]
+B0Map = {path = ".."}
