--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ authors = ["Carl Ganter <cganter@tum.de>"]
 [deps]
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 LinearSolve = "7ed4a6bd-45f5-4d41-b270-4a48e9bafcae"
@@ -23,6 +24,7 @@ VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 [compat]
 ChunkSplitters = "3.1.0"
 Compat = "4.17.0"
+DocumenterTools = "0.1.21"
 FFTW = "1.8.1"
 LinearAlgebra = "1.11.0"
 LinearSolve = "3.44.0"
