--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ version = "0.1.3"
 authors = ["Carl Ganter <cganter@tum.de>"]
 
 [deps]
+ADTypes = "47edcb42-4c32-4615-8424-f2b9edc5f35b"
 ChunkSplitters = "ae650224-84b6-46f8-82ea-d812ca08434e"
 Compat = "34da2185-b29b-5c13-b0c7-acf172513d20"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
@@ -22,6 +23,7 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 VP4Optim = "8687cf0f-8f6d-4dd6-8e27-64e326ab5325"
 
 [compat]
+ADTypes = "1.21.0"
 ChunkSplitters = "3.1.0"
 Compat = "4.17.0"
 DocumenterTools = "0.1.21"
